fix image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 480px) {
   .background-image-questions {
-    background-position-y: 0%;
+    background-position-x: 39%;
   }
 }
 @media screen and (max-width: 768px) {
